--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-DB_HOST=localhost
-DB_USER=aloice
-DB_PASSWORD=aloice
-DB_NAME=bookhub
+DB_HOST=dpg-cuuogdi3esus73abfdfg-a
+DB_USER=bookhub_gvry_user
+DB_PASSWORD=wRVE5XZy36XYbK3cj3F5smb96oavaX3I
+DB_NAME=bookhub_gvry
 DB_PORT=5432
 GOOGLE_BOOKS_API_KEY=AIzaSyAT87JZy2NjLHwypLe7eo-Kc21hKgnCRTM
 PORT=5000
